--- a/package.json
+++ b/package.json
@@ -21,18 +21,15 @@
     "install": "^0.13.0",
     "next": "13.4.4",
     "node-fetch": "^3.3.1",
+    "notistack": "^3.0.1",
     "npm": "^9.6.7",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "twitter": "^1.7.1",
     "twitter-api-client": "^1.6.1",
-    "twitter-api-v2": "^1.15.0",
-    "twitter-lite": "^1.1.0",
     "uuid": "^9.0.0"
   }
 }
