FEAT: updated toaster

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/.env
 /.pnp
 .pnp.js
 
@@ -11,6 +12,9 @@
 # next.js
 /.next/
 /out/
+
+# production
+/build
 
 # production
 /build
@@ -25,7 +29,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+/.env
+
 
 # vercel
 .vercel
