--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "twitter-api-client": "^1.6.1",
+    "twitter-api-v2": "^1.15.0",
     "uuid": "^9.0.0"
   }
 }
